--- a/tasks/pacman_conf.yaml
+++ b/tasks/pacman_conf.yaml
@@ -9,3 +9,8 @@
     mode: '0644'
   become: yes
   become_user: root
+
+- name: Pull in multilib
+  pacman:
+    update_cache: yes
+    upgrade: yes
