--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -33,110 +33,112 @@ packages__aur_helper: yes
 packages__aur_helper_pkg: yay
 
 packages__xorg:
+  - xf86-input-libinput
+  - xf86-video-fbdev
   - xorg-server
   - xorg-apps
-  - xf86-input-libinput
   - xorg-xrdb
   - xorg-xsetroot
   - xorg-xev
 packages__gpu_amd:
+  - lib32-mesa
+  - mesa
   - xf86-video-amdgpu
-  - mesa
-  - lib32-mesa
 packages__gpu_intel:
-  - xf86-video-intel
-  - mesa
   - lib32-mesa
+  - mesa
+  - xf86-video-intel
 packages__gpu_nvidia:
+  - lib32-nvidia-utils
   - nvidia-dkms
   - nvidia-utils
-  - lib32-nvidia-utils
   - nvidia-settings
 packages__gpu_generic:
-  - xf86-video-vesa
-  - mesa
   - lib32-mesa
+  - mesa
+  - xf86-video-vesa
 
 packages__pipewire:
   - pipewire-alsa
-  - pipewire-pulse
   - pipewire-jack
+  - pipewire-pulse
 
 packages__pkgs:
   # Console tools
+  - antibody
+  - bat
+  - bash-completion
+  - fzf
+  - fzf-extras
   - git
   - github-cli
   - gitlab-glab
+  - htop
+  - mtpfs
   - ncdu
+  - neofetch
   - neovim
   - neovim-plug
-  - gbt
-  - htop
-  - tig
-  - fzf
-  - fzf-extras
-  - zsh
-  - antibody
-  - neofetch
-  - tree
-  - pass
-  - bash-completion
-  - zsh-completions
-  - onefetch
-  - sysstat
   - nnn
+  - onefetch
+  - pass
   - rclone
-  - mtpfs
   - repo
   - ripgrep
-  - bat
+  - starship
+  - sysstat
+  - tig
+  - tree
+  - zsh
+  - zsh-completions
 
   # net
-  - networkmanager
-  - network-manager-applet
-  - openconnect
-  - openvpn
-  - wireguard
-  - networkmanager-openconnect
-  - networkmanager-openvpn
+  - bind # Needed for tools
+  - dnsmasq
   - iperf3
   - inetutils
-  # Needed for tools
-  - bind
-  - dnsmasq
-  - whois
+  - network-manager-applet
+  - networkmanager
+  - networkmanager-openconnect
+  - networkmanager-openvpn
   - nmap
   - openbsd-netcat
-  - wireshark-qt
+  - openconnect
+  - openvpn
+  - whois
   - wget
+  - wireguard
+  - wireshark-qt
 
   # sys
-  - docker
-  - docker-compose
-  - skopeo
-  - kubectl
-  - helm
-  - kubeadm
-  - kubectx
-  - remmina
-  - keepassxc
   - ansible
   - ansible-lint
-  - yamllint
-  - shellcheck
   - aws-cli
+  - docker
+  - docker-compose
+  - efibootmgr
+  - helm
   - jq
-  - iperf3
+  - keepassxc
+  - kubectl
+  - kubeadm
+  - kubectx
+  - shellcheck
   - net-snmp
+  - ntfs-3g
   - packer
-  - terraform
   - pigz
   - pwgen
+  - remmina
   - rsync
-  - zip
+  - skopeo
+  - terraform
+  - terragrunt
   - unzip
   - unrar
   - unarchiver
+  - yamllint
+  - zip
 
   # libs
   - python-black
@@ -146,70 +148,77 @@ packages__pkgs:
   - python-hpilo
   - python-jmespath
   - python-ntlm-auth
-  - python-yaml
   - python-pykerberos
   - python-pynvim
   - python-pytest-testinfra
+  - python-pywinrm
   - python-ldap
+  - python-yaml
 
   # dev
+  - clang
+  - cmake
   - git-cola
   - git-lfs
-  - meld
+  - gdb
+  - go
+  - jdk-openjdk
   - lazydocker
   - lazygit
-  - cmake
-  - clang
   - lldb
-  - gdb
-  - strace
-  - go
-  - rust
-  - jdk-openjdk
+  - meld
   - npm
+  - rust
+  - strace
 
   # WM/DE
+  - alacritty
   - arandr
   - chezmoi
+  - dunst
+  - feh
+  - glava
+  - leafpad
+  - picom-tryone-git
+  - plymouth-git
+  - qt5ct
+  - qt5-styleplugins
   - sddm
   - sddm-theme-aerial-git
   - spectrwm
-  - suru-plus-dark-git
-  - leafpad
-  - picom-tryone-git
-  - dunst
-  - xlockmore
-  - feh
-  - alacritty
-  - glava
   - spicetify-cli
-  - qt5ct
-  - qt5-styleplugins
   - themix-gui-git
+  - themix-plugin-base16-git
+  - themix-icons-suru-plus-git
   - themix-theme-oomox-git
   - vivid
+  - xlockmore
 
   # Fonts
   - nerd-fonts-iosevka
+  - noto-fonts-emoji
   - otf-san-francisco
+  - ttf-dejavu
+  - ttf-google-fonts-typewolf
 
   # Audio
-  - helvum
   - pavucontrol
+  - helvum
   - spotify
 
   # Media
-  - firefox
   - chromium
-  - google-chrome
-  - flameshot
-  - scrot
-  - playerctl
-  - mumble
-  - teamspeak3
-  - steam
-  - zathura
-  - youtube-dl
-  - mpv
-  - obs-studio
   - discord
+  - firefox
+  - flameshot
+  - google-chrome
+  - playerctl
+  - scrot
+  - steam
+  - teamspeak3
+  - mpv
+  - mumble
+  - obs-studio
+  - texlive-most
+  - youtube-dl
+  - zathura
