Switch over to picom-git | https://github.com/yshui/picom/pull/382

--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -210,7 +210,7 @@ packages__pkgs:
   - feh
   - glava
   - leafpad
-  - picom-tryone-git
+  - picom-git
   - plymouth-git
   - qt5ct
   - qt5-styleplugins
