Updating Iosevka package to newer pkg name

--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -230,12 +230,12 @@ packages__pkgs:
   # Fonts
   - adobe-source-han-sans-otc-fonts
   - adobe-source-han-serif-otc-fonts
-  - nerd-fonts-iosevka
   - noto-fonts-cjk
   - noto-fonts-emoji
   - otf-san-francisco
   - ttf-dejavu
   - ttf-google-fonts-typewolf
+  - ttf-iosevka-nerd
   - ttf-ms-win10-auto
 
   # Audio
