--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -171,6 +171,7 @@ packages__pkgs:
   - net-snmp
   - ntfs-3g
   - packer
+  - packer-provisioner-goss
   - pacman-contrib
   - pigz
   - pwgen
@@ -197,6 +198,7 @@ packages__pkgs:
   - python-ldap
   - python-ntlm-auth
   - python-openstackclient
+  - python-pipreqs
   - python-pykerberos
   - python-pynvim
   - python-pypi2pkgbuild
