Adding binfmt pkg for buildx

--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -237,6 +237,7 @@ packages__pkgs:
   - yarn
 
   # emulation / virt
+  - binfmt-qemu-all-arch
   - edk2-ovmf
   - qemu-headless
   - qemu-headless-arch-extra
