Favour lbzip2 over pbzip2

--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -171,6 +171,7 @@ packages__pkgs:
   - ipcalc
   - jq
   - keepassxc
+  - lbzip2
   - libvncserver
   - lm_sensors
   - mlocate
@@ -180,7 +181,6 @@ packages__pkgs:
   - packer
   - packer-provisioner-goss
   - pacman-contrib
-  - pbzip2
   - pigz
   - pwgen
   - remmina
